# opennetworking-docs

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
Contribua/: index.html
Ferramentas/: index.html
Ferramentas/Edgeshark/: index.html
Ferramentas/Elasticsearch/: index.html
Ferramentas/Elasticsearch/Configurando IPFIX no ELK/: index.html
Ferramentas/Elasticsearch/Configurando Syslog no ELK/: index.html
Ferramentas/LibreNMS/: index.html
Ferramentas/Primeiros passos - preparando o ambiente/: index.html
Ferramentas/Telegraf/: index.html
Ferramentas/Visual Studio Code/: index.html
Ferramentas/Visual Studio Code/Guia: Deploy usando vscode/: index.html
Ferramentas/Zabbix/: index.html
Ferramentas/Zabbix/Configurando Auto Discovery/: index.html
Getting Started/: index.html
Guias/Netbox/: index.html
Guias/Netreplica/: index.html
Laboratórios/: index.html
Laboratórios/Contribua/: index.html
Templates/: .$Template_redes_abertas.drawio.bkp  Template_Redes_abertas.drawio  vendors.drawio
automations/: .env  .translation_state.json  dict_path.json  generate_translation.py
docs/: Contribua.md  index.md
docs/Ferramentas/: index.md
docs/en/: Contribua.md  Getting Started.md  index.md
docs/img/: Template_Redes_abertas.html
docs/pt/: Contribua.md  Getting Started.md  index.md
en/: index.html
en/Contribua/: index.html
en/Ferramentas/: index.html
en/Getting Started/: index.html
en/Laboratórios/: index.html
search/: search_index.json
(+229 files in other folders)
